--- a/index.html
+++ b/index.html
@@ -2754,6 +2754,40 @@
                     <div class="mini-stat"><div class="mini-label">Balance Neto</div><div class="mini-value" id="balanceMes">$0</div></div>
                 </div>
                 <div class="card">
+                    <h3 style="margin-bottom:15px;"><i class="fas fa-calendar-day"></i> Tope Diario</h3>
+                    <div class="stats-grid">
+                        <div class="mini-stat">
+                            <div class="mini-label">Tope diario de hoy</div>
+                            <div class="mini-value" id="dailyCapValue">$0</div>
+                        </div>
+                        <div class="mini-stat debt">
+                            <div class="mini-label">Gasto acumulado de hoy</div>
+                            <div class="mini-value" id="dailySpendValue">$0</div>
+                        </div>
+                        <div class="mini-stat">
+                            <div class="mini-label">Estado</div>
+                            <div class="mini-value" id="dailyCapStatus">OK</div>
+                        </div>
+                    </div>
+                    <div style="margin-top:15px;">
+                        <div style="font-size:0.8rem; color:var(--text-light); text-transform:uppercase; letter-spacing:0.08em; margin-bottom:8px;">Resumen últimos días</div>
+                        <div id="dailyCapList">
+                            <div class="mini-stat" style="margin-bottom:8px;">
+                                <div class="mini-label">--/--</div>
+                                <div class="mini-value">$0 · OK</div>
+                            </div>
+                            <div class="mini-stat" style="margin-bottom:8px;">
+                                <div class="mini-label">--/--</div>
+                                <div class="mini-value">$0 · OK</div>
+                            </div>
+                            <div class="mini-stat">
+                                <div class="mini-label">--/--</div>
+                                <div class="mini-value">$0 · OK</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
                     <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
                         <h3 style="margin:0;"><i class="fas fa-credit-card"></i> Deudas Tarjetas</h3>
                         <button onclick="openQuotaModal()" class="btn btn--secondary btn--sm"><i class="fas fa-cog"></i> Gestionar</button>
